noch ein bisschen Sharing

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="%PUBLIC_URL%/flypsite.ico">
+	<!-- OpenGraph -->
+	<title>Archäologisches Fenster Harburg - AMH | FlypSite-Journal</title>
+	<meta property="og:title" content="Archäologisches Fenster Harburg | AMH | FlypSite-Journal" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://schaufenster.flyp.tv/journal" />
+	<meta property="og:image" content="https://d32odw1frluegp.cloudfront.net/142/1736/bhsnxw.png" />
+
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@flypsite">
+	<meta name="twitter:image:src" content="https://d32odw1frluegp.cloudfront.net/142/1736/bhsnxw.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
