--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
 	<meta property="og:title" content="Archäologisches Fenster Harburg | AMH | FlypSite-Journal" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://schaufenster.flyp.tv/journal" />
-	<meta property="og:image" content="https://d32odw1frluegp.cloudfront.net/142/1736/bhsnxw.png" />
+	<meta property="og:image" content="http://schaufenster.flyp.tv/journal/sharing.jpg" />
 
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@flypsite">
-	<meta name="twitter:image:src" content="https://d32odw1frluegp.cloudfront.net/142/1736/bhsnxw.png">
+	<meta name="twitter:image:src" content="http://schaufenster.flyp.tv/journal/sharing.jpg">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
