--- a/public/framer.html
+++ b/public/framer.html
@@ -7,6 +7,11 @@
 		margin:0;
 		padding:0;
 	}
+	body {
+		background: #ecb6c7 url(https://d32odw1frluegp.cloudfront.net/142/1736/bhsnxw.png);
+		background-size: 50%;
+		background-position: 0 10%;
+	}
 	#content {
 			position: absolute;
 			height: 800px;
@@ -22,7 +27,7 @@
 	<title></title>
 </head>
 <body>
-	<iframe id="content" src="index.html"></iframe>
+	<iframe id="content" src="index.html" frameborder="0" scrolling="no" webkitallowfullscreen="webkitAllowFullScreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowFullScreen" style="border: 0px none transparent;"></iframe>
 </body>
 </html>
 
