some cleaning and commenting

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
+    <!-- user-scalable=no wont work on iOS 10+ -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="%PUBLIC_URL%/flypsite.ico">
 	<!-- OpenGraph -->
