--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/flypsite.ico">
 	<!-- OpenGraph -->
 	<title>Archäologisches Fenster Harburg - AMH | FlypSite-Journal</title>
+	<description>Archäologisches Fenster Harburg: Stadtgeschichte multimedial erlebbar!</descrition>
 	<meta property="og:title" content="Archäologisches Fenster Harburg | AMH | FlypSite-Journal" />
+	<meta property="og:description" content="Archäologisches Fenster Harburg: Stadtgeschichte multimedial erlebbar!" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://schaufenster.flyp.tv/journal" />
 	<meta property="og:image" content="http://schaufenster.flyp.tv/journal/sharing.jpg" />
@@ -25,7 +27,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>FlypSite-Journal</title>
   </head>
   <body>
     <div id="FlypJournal"></div>
